--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
     background-color: rgb(236, 236, 236);
-    
+
 }
 
 input {
     text-align: right;
-    height:70px;
+    height: 70px;
     font-size: 40px;
-    width:650px;
+    width: 650px;
     background-color: rgb(236, 236, 236);
-    border:none;
+    border: none;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
 }
 
@@ -18,17 +18,17 @@ button {
     background-color: rgb(245, 245, 245);
     box-sizing: border-box;
     border: none;
-    width:160px;
-    height:60px;
-    font-weight:450;
-    font-size:16px;
+    width: 160px;
+    height: 60px;
+    font-weight: 450;
+    font-size: 16px;
     border-radius: 2px;
     font-family: Helvetica;
 }
 
-.calculator-body { 
-    display:flex;
-    flex-wrap:wrap;
+.calculator-body {
+    display: flex;
+    flex-wrap: wrap;
     width: 660px;
     gap: 5px;
     flex-basis: 660px;
@@ -36,25 +36,25 @@ button {
 }
 
 .buttons {
-    display:flex;
-    flex-direction:row;
-    flex-wrap:wrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     box-sizing: border-box;
-    gap:5px;
-    
+    gap: 5px;
+
 }
 
 .memorybuttons {
-    display:flex;
+    display: flex;
     gap: 5px;
     box-sizing: border-box;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     width: 660px;
 }
 
 .memorybuttons button {
     width: 80px;
-    height:30px;
+    height: 30px;
     background-color: rgb(231, 231, 231);
 
 }
@@ -64,27 +64,36 @@ button:hover {
 
 }
 
+button:active {
+    filter: brightness(98%);
+}
+
 .memorybuttons button:hover {
     background-color: rgb(206, 206, 206);
 }
 
 .lighter {
-    background-color:rgb(252, 252, 252);
+    background-color: rgb(252, 252, 252);
 }
-.lighter:hover {
-    background-color:rgb(245, 245, 245);
 
+.lighter:hover {
+    background-color: rgb(245, 245, 245);
 }
 
 .blue {
-    background-color:rgb(0, 78, 141);
-    color:white;
+    background-color: rgb(0, 78, 141);
+    color: white;
 }
 
 .blue:hover {
-    background-color:rgb(0, 95, 173);
+    background-color: rgb(0, 95, 173);
+    filter: brightness(103%);
+}
+
+.blue:active {
+    filter: brightness(114%);
 }
 
 .bigger {
-    font-size:20px;
+    font-size: 20px;
 }
