--- a/style.css
+++ b/style.css
@@ -92,6 +92,11 @@ button.active {
 .lighter:active {
     background-color: rgb(240, 240, 240);
 }
+
+.lighter.active {
+    background-color: rgb(240, 240, 240);
+}
+
 .blue {
     background-color: rgb(0, 78, 141);
     color: white;
@@ -99,11 +104,15 @@ button.active {
 
 .blue:hover {
     background-color: rgb(0, 95, 173);
-    filter: brightness(103%);
+    
 }
 
 .blue:active {
-    filter: brightness(114%);
+    background-color: rgb(0, 112, 204);
+}
+
+.blue.active {
+    background-color: rgb(0, 112, 204);
 }
 
 .bigger {
